<resources>
    <string name="app_name">VNPT Scanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--app vnpt string-->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <!--value result Viet Nam-->
    <string name="quetHoaDonDienTu">Quét mã hóa đơn điện tử</string>
    <string name="tieptucScan">Tiếp tục Scan</string>
    <string name="label_result">Thông tin hóa đơn</string>
    <string name="button_text_scan">Quét</string>
    <string name="maHoaDon">Mã hóa đơn</string>
    <string name="maSoThue">Mã số thuế khách hàng</string>
    <string name="tongTien">Tổng tiền</string>
    <string name="thue">Thuế</string>
    <string name="ngayPhatHanh">Ngày phát hành</string>
    <string name="mauSo">Mẫu số</string>
    <string name="serialHoaDon">Serial hóa đơn</string>
    <string name="soHoaDon">Số hóa đơn</string>
    <string name="maCongTy">Mã số thuế công ty</string>
    <string name="ngonNgu">Ngôn ngữ</string>
    <string name="danhGiaUngDung">Đánh giá ứng dụng</string>
    <string name="guiPhanHoi">Gửi phản hồi</string>
    <string name="caiDat">Cài đặt</string>
    <string name="mayAnh">Máy ảnh</string>

    <!--tag Fragment-->
    <string name="tagSettingFragment">tagSettingFragment</string>
    <string name="tagScanFragment">tagScanFragment</string>
    <string name="tagDecodeFragment">tagDecodeFragment</string>

    <!--mail-->
    <string name="mailFeedBack">cskh1800@sport1.vnn.vn</string>

    <!--note-->
    <string name="VNPTScanner">VNPT Scanner</string>
    <string name="noiDungThongBao">muốn truy cập máy ảnh và thư viện của bạn để quét QR Code.</string>
    <string name="noiDungHuongDan">Đưa vùng camera vào phần ảnh bạn muốn scan</string>

    <!--chọn ngôn ngữ-->
    <string name="tiengAnh">Tiếng Anh</string>
    <string name="tiengViet">Tiếng Việt</string>
    <string name="huy">Hủy</string>
    <string name="titleChonNgonNgu">Vui lòng chọn ngôn ngữ</string>

     <!--error-->
    <string name="decodeError">VNPT Scanner không hỗ trợ định dạng QR code này</string>
    <string name="titleDecodeError">Lỗi</string>
    <string name="nameOk">Ok</string>
    <string name="backToExit">Vui lòng nhấn nút back 2 lần để thoát</string>
    <string name="camera_deny">Chức năng không được khởi tạo khi không được cấp quyền camera</string>

</resources>
