<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/colorWhite"
    android:paddingTop="60dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/ngonNgu"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:paddingBottom="@dimen/padding_4"
        android:paddingTop="@dimen/padding_4"
        android:layout_marginLeft="@dimen/padding_10"
        android:id="@+id/txtLanguage" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/padding_10"
        android:background="@color/colorGrey"/>
    <TextView
        android:text="@string/danhGiaUngDung"
        android:textSize="18dp"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_4"
        android:paddingTop="@dimen/padding_4"
        android:layout_marginLeft="@dimen/padding_10"
        android:id="@+id/txtRate" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/padding_10"
        android:background="@color/colorGrey"/>
    <TextView
        android:text="@string/guiPhanHoi"
        android:textSize="18dp"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_4"
        android:paddingTop="@dimen/padding_4"
        android:layout_marginLeft="@dimen/padding_10"
        android:id="@+id/txtSendFeedBack" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/padding_10"
        android:background="@color/colorGrey"/>
</LinearLayout>
